--- a/Ways to connect/conn.tex
+++ b/Ways to connect/conn.tex
@@ -39,7 +39,7 @@
 				  \end{itemize}
 				  
 		\newpage
-		\section{HDMI to DVI/VGA to PC monitor}
+		\section{HDMI to DVI/VGA port of PC Monitor/TV}
 		The HDMI connection can also be used to connect via a DVI connection, commonly available on newer monitors and digital TVs.
 		\begin{figure}[h!]
 			\includegraphics[scale=0.5]{pc.png}
@@ -102,7 +102,26 @@
 	    
 	    \section{USB Wifi Dongle to Router}
 	    
-	    For more information regarding this method kindly refer \url{https://github.com/eyantrainternship/eYSIP_2015_RaspberryPi-Development-Board/tree/master/Task%202}
+	    In this method we connect Wifi Dongle to R-Pi. As a result the R-Pi gets connected to wireless network and a user can access it using the IP address of R-Pi.
+	    
+	    In order to start using wireless network one needs to edit some files on R-Pi.For more information regarding this kindly refer \textit{Experiments} section of  \url{https://github.com/eyantrainternship/eYSIP_2015_RaspberryPi-Development-Board/tree/master/2_Establishing%20network%20connection%20and%20SSH%20connection}
+	    
+	    \vspace{0.3cm}	
+	    \textbf{Advantages}
+	    \begin{itemize}
+	    	\item Simple quick setup
+	    	\item Requires no separate monitor for setup
+	    	\item No need of HDMI cable
+		    \item High resolution display (up to 1080p)
+		    \item Offers remote connectivity
+	    \end{itemize}
+	    
+	    \textbf{Disadvantages}
+	    \begin{itemize}
+	    	\item SSH connection is slow if the network is weak 
+	    \end{itemize}
+	    
+	    
 	
 	\vspace{0.5cm}
 	\section{References}
